--- a/blog.html
+++ b/blog.html
@@ -479,7 +479,7 @@
               <div class="row">
                 <div class="col-xl-4 col-md-12">
                   <img
-                    src="assets/img/build.png"
+                    src="assets/img/blog/blog.png"
                     class="prog-img"
                     alt="Video"
                   />
@@ -523,7 +523,7 @@
               <div class="row">
                 <div class="col-xl-4 col-md-12">
                   <img
-                    src="assets/img/build.png"
+                    src="assets/img/blog/blog-1.png"
                     class="prog-img"
                     alt="Video"
                   />
@@ -567,7 +567,7 @@
               <div class="row">
                 <div class="col-xl-4 col-md-12">
                   <img
-                    src="assets/img/build.png"
+                    src="assets/img/blog/blog-2.png"
                     class="prog-img"
                     alt="Video"
                   />
@@ -611,7 +611,7 @@
               <div class="row">
                 <div class="col-xl-4 col-md-12">
                   <img
-                    src="assets/img/build.png"
+                    src="assets/img/blog/blog-3.png"
                     class="prog-img"
                     alt="Video"
                   />
@@ -724,8 +724,8 @@
           <div class="col-md-4 text-center">سياسة الخصوصية</div>
         </div>
       </div>
-      <hr style="border-top: 1px dashed #fff" class="w-75" />
-      <p class="text-center" style="color: #ababab">
+       
+     <p class="footer__copyright">
         ©جميع الحقوق محفوظة لمنصة علوم السُنة النبوية 2021
       </p>
     </footer>
