--- a/index.html
+++ b/index.html
@@ -1257,17 +1257,17 @@
         <!-- app download -->
         <section class="app-download">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-4 ">
+                <div class="row app-download__wrapper">
+                    <div class="col-md-4 app-download__image">
                         <div class="image-box">
                             <img src="assets/img/mobile.png" alt="" class="mob-img">
                         </div>
                     </div>
-                    <div class="col-md-8 ">
+                    <div class="col-md-8 app-download__content">
                         <div class="desc">
                             <h5>تطبيق المنصة</h5>
                             <h3>علوم <span class="colored">السُنة </span>النبوية</h3>
-                            <p class="mt-3 mb-4">لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي الشكل وليس المحتوى
+                            <p class="mt-3 mb-4 w-75">لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي الشكل وليس المحتوى
                                 ويُستخدم في صناعات المطابع ودور النشر.</p>
 
                             <div class="btns ">
