--- a/news.html
+++ b/news.html
@@ -432,10 +432,10 @@
             <div class="">
                 <div class="row">
                     <div class="col-xl-6 col-md-12">
-                        <div class="program-box">
+                        <div class="program-box news-list__item">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img src="assets/img/build.png" class="prog-img" alt="Video">
+                                    <img src="assets/img/news.png" class="prog-img" alt="Video">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="desc">
@@ -454,58 +454,10 @@
                         </div>
                     </div>
                     <div class="col-xl-6 col-md-12">
-                        <div class="program-box">
+                        <div class="program-box news-list__item">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img src="assets/img/build.png" class="prog-img" alt="Video">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="desc">
-                                        <p>لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي الشكل وليس المحتوى ويُستخدم
-                                            في صناعات المطابع ودور النشر.</p>
-                                        <p><img src="assets/img/time-icon.png" alt="Video">3 يوليو 2021</p>
-
-
-                                    </div>
-                                </div>
-                            </div>
-
-
-
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="">
-                <div class="row">
-                    <div class="col-xl-6 col-md-12">
-                        <div class="program-box">
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <img src="assets/img/build.png" class="prog-img" alt="Video">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="desc">
-                                        <p>لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي الشكل وليس المحتوى ويُستخدم
-                                            في صناعات المطابع ودور النشر.</p>
-                                        <p><img src="assets/img/time-icon.png" alt="Video">3 يوليو 2021</p>
-
-
-                                    </div>
-                                </div>
-                            </div>
-
-
-
-
-                        </div>
-                    </div>
-                    <div class="col-xl-6 col-md-12">
-                        <div class="program-box">
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <img src="assets/img/build.png" class="prog-img" alt="Video">
+                                    <img src="assets/img/news.png" class="prog-img" alt="Video">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="desc">
@@ -528,10 +480,10 @@
             <div class="">
                 <div class="row">
                     <div class="col-xl-6 col-md-12">
-                        <div class="program-box">
+                        <div class="program-box news-list__item">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img src="assets/img/build.png" class="prog-img" alt="Video">
+                                    <img src="assets/img/news.png" class="prog-img" alt="Video">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="desc">
@@ -550,10 +502,10 @@
                         </div>
                     </div>
                     <div class="col-xl-6 col-md-12">
-                        <div class="program-box">
+                        <div class="program-box news-list__item">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img src="assets/img/build.png" class="prog-img" alt="Video">
+                                    <img src="assets/img/news.png" class="prog-img" alt="Video">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="desc">
@@ -576,10 +528,10 @@
             <div class="">
                 <div class="row">
                     <div class="col-xl-6 col-md-12">
-                        <div class="program-box">
+                        <div class="program-box news-list__item">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img src="assets/img/build.png" class="prog-img" alt="Video">
+                                    <img src="assets/img/news.png" class="prog-img" alt="Video">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="desc">
@@ -598,10 +550,58 @@
                         </div>
                     </div>
                     <div class="col-xl-6 col-md-12">
-                        <div class="program-box">
+                        <div class="program-box news-list__item">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img src="assets/img/build.png" class="prog-img" alt="Video">
+                                    <img src="assets/img/news.png" class="prog-img" alt="Video">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="desc">
+                                        <p>لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي الشكل وليس المحتوى ويُستخدم
+                                            في صناعات المطابع ودور النشر.</p>
+                                        <p><img src="assets/img/time-icon.png" alt="Video">3 يوليو 2021</p>
+
+
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="">
+                <div class="row">
+                    <div class="col-xl-6 col-md-12">
+                        <div class="program-box news-list__item">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img src="assets/img/news.png" class="prog-img" alt="Video">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="desc">
+                                        <p>لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي الشكل وليس المحتوى ويُستخدم
+                                            في صناعات المطابع ودور النشر.</p>
+                                        <p><img src="assets/img/time-icon.png" alt="Video">3 يوليو 2021</p>
+
+
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-md-12">
+                        <div class="program-box news-list__item">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img src="assets/img/news.png" class="prog-img" alt="Video">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="desc">
