--- a/videos.html
+++ b/videos.html
@@ -437,7 +437,7 @@
                             <div class="position-relative">
                                 <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
                                     <i class="icon icon-play video-icon"></i>
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
                                 </a>
                             </div>
 
@@ -449,7 +449,7 @@
                                 <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
                                     <i class="icon icon-play video-icon"></i>
 
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
                                 </a>
                             </div>
 
@@ -460,7 +460,7 @@
                             <div class="position-relative">
                                 <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
                                     <i class="icon icon-play video-icon"></i>
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
                                 </a>
                             </div>
 
@@ -471,60 +471,7 @@
                             <div class="position-relative">
                                 <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
                                     <i class="icon icon-play video-icon"></i>
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
-                                </a>
-                            </div>
-
-                        </div>
-                    </div>
-
-
-
-                </div>
-
-
-            </div>
-            <div class="mt-4">
-                <div class="row">
-                    <div class="col-xl-3 col-md-6">
-                        <div class="gallery-box">
-                            <div class="position-relative">
-                                <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
-                                    <i class="icon icon-play video-icon"></i>
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
-                                </a>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-6">
-                        <div class="gallery-box">
-                            <div class="position-relative">
-                                <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
-                                    <i class="icon icon-play video-icon"></i>
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
-                                </a>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-6">
-                        <div class="gallery-box">
-                            <div class="position-relative">
-                                <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
-                                    <i class="icon icon-play video-icon"></i>
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
-                                </a>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-6">
-                        <div class="gallery-box">
-                            <div class="position-relative">
-                                <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
-                                    <i class="icon icon-play video-icon"></i>
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
                                 </a>
                             </div>
 
@@ -544,7 +491,7 @@
                             <div class="position-relative">
                                 <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
                                     <i class="icon icon-play video-icon"></i>
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
                                 </a>
                             </div>
 
@@ -555,7 +502,7 @@
                             <div class="position-relative">
                                 <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
                                     <i class="icon icon-play video-icon"></i>
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
                                 </a>
                             </div>
 
@@ -566,7 +513,7 @@
                             <div class="position-relative">
                                 <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
                                     <i class="icon icon-play video-icon"></i>
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
                                 </a>
                             </div>
 
@@ -577,7 +524,7 @@
                             <div class="position-relative">
                                 <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
                                     <i class="icon icon-play video-icon"></i>
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
                                 </a>
                             </div>
 
@@ -597,7 +544,7 @@
                             <div class="position-relative">
                                 <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
                                     <i class="icon icon-play video-icon"></i>
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
                                 </a>
                             </div>
 
@@ -608,7 +555,7 @@
                             <div class="position-relative">
                                 <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
                                     <i class="icon icon-play video-icon"></i>
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
                                 </a>
                             </div>
 
@@ -619,7 +566,7 @@
                             <div class="position-relative">
                                 <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
                                     <i class="icon icon-play video-icon"></i>
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
                                 </a>
                             </div>
 
@@ -630,7 +577,60 @@
                             <div class="position-relative">
                                 <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
                                     <i class="icon icon-play video-icon"></i>
-                                    <img class="w-100" src="assets/img/build.png" alt="Video">
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
+                </div>
+
+
+            </div>
+            <div class="mt-4">
+                <div class="row">
+                    <div class="col-xl-3 col-md-6">
+                        <div class="gallery-box">
+                            <div class="position-relative">
+                                <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
+                                    <i class="icon icon-play video-icon"></i>
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6">
+                        <div class="gallery-box">
+                            <div class="position-relative">
+                                <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
+                                    <i class="icon icon-play video-icon"></i>
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6">
+                        <div class="gallery-box">
+                            <div class="position-relative">
+                                <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
+                                    <i class="icon icon-play video-icon"></i>
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6">
+                        <div class="gallery-box">
+                            <div class="position-relative">
+                                <a href="assets/img/video.mp4" data-fancybox="media-videos" class="">
+                                    <i class="icon icon-play video-icon"></i>
+                                    <img class="w-100" src="assets/img/blog/blog-4.png" alt="Video">
                                 </a>
                             </div>
 
