--- a/courses-list.html
+++ b/courses-list.html
@@ -475,7 +475,7 @@
     </div>
 
     <!-- tabs SECTION  -->
-    <div class="container data-tabs2">
+    <div class="container data-tabs2 program-list">
       <div class="list-group" id="list-tab" role="tablist">
         <a
           class="list-group-item list-group-item-action active"
@@ -523,7 +523,7 @@
                   <div class="row">
                     <div class="col-xl-4 col-md-12">
                       <img
-                        src="assets/img/build.png"
+                        src="assets/img/blog/blog.png"
                         class="prog-img"
                         alt="Video"
                       />
@@ -531,7 +531,7 @@
                     <div class="col-xl-8 col-md-12">
                       <div class="desc">
                         <span class="badge rounded-pill">مجاني</span>
-                        <p class="heading-3 mt-3">نص بديل للعنوان</p>
+                        <p class="heading-3 mt-3 program-list__heading">ماهي السنة النبوية ؟</p>
                         <p>
                           لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي
                           الشكل وليس المحتوى ويُستخدم في صناعات المطابع ودور
@@ -573,7 +573,7 @@
                   <div class="row">
                     <div class="col-xl-4 col-md-12">
                       <img
-                        src="assets/img/build.png"
+                        src="assets/img/blog/blog-1.png"
                         class="prog-img"
                         alt="Video"
                       />
@@ -581,7 +581,7 @@
                     <div class="col-xl-8 col-md-12">
                       <div class="desc">
                         <span class="badge rounded-pill">مجاني</span>
-                        <p class="heading-3 mt-3">نص بديل للعنوان</p>
+                        <p class="heading-3 mt-3 program-list__heading">ماهي السنة النبوية ؟</p>
                         <p>
                           لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي
                           الشكل وليس المحتوى ويُستخدم في صناعات المطابع ودور
@@ -622,7 +622,7 @@
                   <div class="row">
                     <div class="col-xl-4 col-md-12">
                       <img
-                        src="assets/img/build.png"
+                        src="assets/img/blog/blog-3.png"
                         class="prog-img"
                         alt="Video"
                       />
@@ -630,7 +630,7 @@
                     <div class="col-xl-8 col-md-12">
                       <div class="desc">
                         <span class="badge rounded-pill">مجاني</span>
-                        <p class="heading-3 mt-3">نص بديل للعنوان</p>
+                        <p class="heading-3 mt-3 program-list__heading">ماهي السنة النبوية ؟</p>
                         <p>
                           لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي
                           الشكل وليس المحتوى ويُستخدم في صناعات المطابع ودور
@@ -671,7 +671,7 @@
                   <div class="row">
                     <div class="col-xl-4 col-md-12">
                       <img
-                        src="assets/img/build.png"
+                        src="assets/img/blog/blog-2.png"
                         class="prog-img"
                         alt="Video"
                       />
@@ -682,7 +682,7 @@
                           <span class="red-bold">100</span> س ر
                         </p>
                         <span class="badge2 rounded-pill">مدفوع</span>
-                        <p class="heading-3 mt-3">نص بديل للعنوان</p>
+                        <p class="heading-3 mt-3 program-list__heading">ماهي السنة النبوية ؟</p>
                         <p>
                           لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي
                           الشكل وليس المحتوى ويُستخدم في صناعات المطابع ودور
@@ -757,7 +757,7 @@
                   <div class="row">
                     <div class="col-xl-4 col-md-12">
                       <img
-                        src="assets/img/build.png"
+                        src="assets/img/blog/blog-3.png"
                         class="prog-img"
                         alt="Video"
                       />
@@ -765,7 +765,7 @@
                     <div class="col-xl-8 col-md-12">
                       <div class="desc">
                         <span class="badge rounded-pill">مجاني</span>
-                        <p class="heading-3 mt-3">نص بديل للعنوان</p>
+                        <p class="heading-3 mt-3 program-list__heading">ماهي السنة النبوية ؟</p>
                         <p>
                           لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي
                           الشكل وليس المحتوى ويُستخدم في صناعات المطابع ودور
@@ -807,7 +807,7 @@
                   <div class="row">
                     <div class="col-xl-4 col-md-12">
                       <img
-                        src="assets/img/build.png"
+                        src="assets/img/blog/blog.png"
                         class="prog-img"
                         alt="Video"
                       />
@@ -815,7 +815,7 @@
                     <div class="col-xl-8 col-md-12">
                       <div class="desc">
                         <span class="badge rounded-pill">مجاني</span>
-                        <p class="heading-3 mt-3">نص بديل للعنوان</p>
+                        <p class="heading-3 mt-3 program-list__heading">ماهي السنة النبوية ؟</p>
                         <p>
                           لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي
                           الشكل وليس المحتوى ويُستخدم في صناعات المطابع ودور
@@ -856,7 +856,7 @@
                   <div class="row">
                     <div class="col-xl-4 col-md-12">
                       <img
-                        src="assets/img/build.png"
+                        src="assets/img/blog/blog.png"
                         class="prog-img"
                         alt="Video"
                       />
@@ -864,7 +864,7 @@
                     <div class="col-xl-8 col-md-12">
                       <div class="desc">
                         <span class="badge rounded-pill">مجاني</span>
-                        <p class="heading-3 mt-3">نص بديل للعنوان</p>
+                        <p class="heading-3 mt-3 program-list__heading">ماهي السنة النبوية ؟</p>
                         <p>
                           لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي
                           الشكل وليس المحتوى ويُستخدم في صناعات المطابع ودور
@@ -905,7 +905,7 @@
                   <div class="row">
                     <div class="col-xl-4 col-md-12">
                       <img
-                        src="assets/img/build.png"
+                        src="assets/img/blog/blog.png"
                         class="prog-img"
                         alt="Video"
                       />
@@ -916,7 +916,7 @@
                           <span class="red-bold">100</span> س ر
                         </p>
                         <span class="badge2 rounded-pill">مدفوع</span>
-                        <p class="heading-3 mt-3">نص بديل للعنوان</p>
+                        <p class="heading-3 mt-3 program-list__heading">ماهي السنة النبوية ؟</p>
                         <p>
                           لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي
                           الشكل وليس المحتوى ويُستخدم في صناعات المطابع ودور
@@ -972,7 +972,7 @@
                   <div class="row">
                     <div class="col-xl-4 col-md-12">
                       <img
-                        src="assets/img/build.png"
+                        src="assets/img/blog/blog.png"
                         class="prog-img"
                         alt="Video"
                       />
@@ -980,7 +980,7 @@
                     <div class="col-xl-8 col-md-12">
                       <div class="desc">
                         <span class="badge rounded-pill">مجاني</span>
-                        <p class="heading-3 mt-3">نص بديل للعنوان</p>
+                        <p class="heading-3 mt-3 program-list__heading">ماهي السنة النبوية ؟</p>
                         <p>
                           لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي
                           الشكل وليس المحتوى ويُستخدم في صناعات المطابع ودور
@@ -1022,7 +1022,7 @@
                   <div class="row">
                     <div class="col-xl-4 col-md-12">
                       <img
-                        src="assets/img/build.png"
+                        src="assets/img/blog/blog.png"
                         class="prog-img"
                         alt="Video"
                       />
@@ -1030,7 +1030,7 @@
                     <div class="col-xl-8 col-md-12">
                       <div class="desc">
                         <span class="badge rounded-pill">مجاني</span>
-                        <p class="heading-3 mt-3">نص بديل للعنوان</p>
+                        <p class="heading-3 mt-3 program-list__heading">ماهي السنة النبوية ؟</p>
                         <p>
                           لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي
                           الشكل وليس المحتوى ويُستخدم في صناعات المطابع ودور
@@ -1071,7 +1071,7 @@
                   <div class="row">
                     <div class="col-xl-4 col-md-12">
                       <img
-                        src="assets/img/build.png"
+                        src="assets/img/blog/blog.png"
                         class="prog-img"
                         alt="Video"
                       />
@@ -1079,7 +1079,7 @@
                     <div class="col-xl-8 col-md-12">
                       <div class="desc">
                         <span class="badge rounded-pill">مجاني</span>
-                        <p class="heading-3 mt-3">نص بديل للعنوان</p>
+                        <p class="heading-3 mt-3 program-list__heading">ماهي السنة النبوية ؟</p>
                         <p>
                           لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي
                           الشكل وليس المحتوى ويُستخدم في صناعات المطابع ودور
@@ -1120,7 +1120,7 @@
                   <div class="row">
                     <div class="col-xl-4 col-md-12">
                       <img
-                        src="assets/img/build.png"
+                        src="assets/img/blog/blog.png"
                         class="prog-img"
                         alt="Video"
                       />
@@ -1131,7 +1131,7 @@
                           <span class="red-bold">100</span> س ر
                         </p>
                         <span class="badge2 rounded-pill">مدفوع</span>
-                        <p class="heading-3 mt-3">نص بديل للعنوان</p>
+                        <p class="heading-3 mt-3 program-list__heading">ماهي السنة النبوية ؟</p>
                         <p>
                           لوريم إيبسوم هو ببساطة نص شكلي بمعنى أن الغاية هي
                           الشكل وليس المحتوى ويُستخدم في صناعات المطابع ودور
@@ -1229,8 +1229,8 @@
           <div class="col-md-4 text-center">سياسة الخصوصية</div>
         </div>
       </div>
-      <hr style="border-top: 1px dashed #fff" class="w-75" />
-      <p class="text-center" style="color: #ababab">
+       
+     <p class="footer__copyright">
         ©جميع الحقوق محفوظة لمنصة علوم السُنة النبوية 2021
       </p>
     </footer>
