--- a/blog-details.html
+++ b/blog-details.html
@@ -456,7 +456,7 @@
   
     <hr>
     <p class="">شارك المقال علي</p>
-    <div class="d-flex mt-3 share">  
+    <div class="d-flex mt-3 share justify-content-start">  
      <a href="#"><img src="assets/img/l2.png" alt="Video"></a>
      <a href="#"><img src="assets/img/l3.png" alt="Video"></a>
      <a href="#"><img src="assets/img/l4.png" alt="Video"></a>
