--- a/contact-us.html
+++ b/contact-us.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/swiper.min.css">
         <link rel="stylesheet" href="assets/css/jquery.fancybox.css">
-        <link rel="stylesheet" href="assets/css/style-ltr.min.css">
+        <link rel="stylesheet" href="assets/css/style-rtl.min.css">
         <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
         <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css">
         <link rel="stylesheet" type="text/css" href="assets/css/simplePagination.css">
@@ -422,21 +422,21 @@
     <div class="container">
         <div class="row mb-4">
             <div class="col-md-4 text-center margino2">
-                <div class="icon-square">
+                <div class="square-icon">
                     <img src="assets/img/100.png" alt="">
                     <p>+966 123 456 7890</p>
                 </div>
                
             </div>
             <div class="col-md-4 text-center margino2">
-                <div class="icon-square">
+                <div class="square-icon">
                     <img src="assets/img/90.png" alt="">
                     <p>Sunnah@gmail.com</p>
                 </div>
               
             </div>
             <div class="col-md-4 text-center margino2">
-                <div class="icon-square">
+                <div class="square-icon">
                     <img src="assets/img/91.png" alt="">
                     <p>جدة, السعودية</p>
                 </div>
