--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/swiper.min.css">
     <link rel="stylesheet" href="assets/css/jquery.fancybox.css">
-    <link rel="stylesheet" href="assets/css/style-rtl.min.css">
+    <link rel="stylesheet" href="assets/css/style-ltr.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
     <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="assets/css/simplePagination.css">
@@ -676,7 +676,7 @@
 
                                 <div class="d-flex align-items-center mt-3">
                                     <img src="assets/img/time-icon.png" class="prog-mid" alt="Video">
-                                    <span>مدة الدراسة بالبرنامج</span>
+                                    <span class="mx-2">مدة الدراسة بالبرنامج</span>
                                     <span class="colored">3 اعوام</span>
                                 </div>
                                 <div class="text-center mt-4">
@@ -710,7 +710,7 @@
 
                                 <div class="d-flex align-items-center mt-3">
                                     <img src="assets/img/time-icon.png" class="prog-mid" alt="Video">
-                                    <span>مدة الدراسة بالبرنامج</span>
+                                    <span class="mx-2">مدة الدراسة بالبرنامج</span>
                                     <span class="colored">3 اعوام</span>
                                 </div>
                                 <div class="text-center mt-4">
@@ -743,7 +743,7 @@
 
                                 <div class="d-flex align-items-center mt-3">
                                     <img src="assets/img/time-icon.png" class="prog-mid" alt="Video">
-                                    <span>مدة الدراسة بالبرنامج</span>
+                                    <span class="mx-2">مدة الدراسة بالبرنامج</span>
                                     <span class="colored">3 اعوام</span>
                                 </div>
                                 <div class="text-center mt-4">
@@ -776,7 +776,7 @@
 
                                 <div class="d-flex align-items-center mt-3">
                                     <img src="assets/img/time-icon.png" class="prog-mid" alt="Video">
-                                    <span>مدة الدراسة بالبرنامج</span>
+                                    <span class="mx-2">مدة الدراسة بالبرنامج</span>
                                     <span class="colored">3 اعوام</span>
                                 </div>
                                 <div class="text-center mt-4">
@@ -809,7 +809,7 @@
 
                                 <div class="d-flex align-items-center mt-3">
                                     <img src="assets/img/time-icon.png" class="prog-mid" alt="Video">
-                                    <span>مدة الدراسة بالبرنامج</span>
+                                    <span class="mx-2">مدة الدراسة بالبرنامج</span>
                                     <span class="colored">3 اعوام</span>
                                 </div>
                                 <div class="text-center mt-4">
@@ -842,7 +842,7 @@
 
                                 <div class="d-flex align-items-center mt-3">
                                     <img src="assets/img/time-icon.png" class="prog-mid" alt="Video">
-                                    <span>مدة الدراسة بالبرنامج</span>
+                                    <span class="mx-2">مدة الدراسة بالبرنامج</span>
                                     <span class="colored">3 اعوام</span>
                                 </div>
                                 <div class="text-center mt-4">
