add: corner section

--- a/index.html
+++ b/index.html
@@ -1001,9 +1001,9 @@
         <div class="news-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-6 col-md-12">
+                    <div class="col-xl-6 col-md-12 news-section__item">
                         <div class="program-box">
-                            <div class="row">
+                            <div class="row h-100">
                                 <div class="col-md-4">
                                     <img src="assets/img/build.png" class="prog-img" alt="Video">
                                 </div>
@@ -1023,9 +1023,9 @@
 
                         </div>
                     </div>
-                    <div class="col-xl-6 col-md-12">
+                    <div class="col-xl-6 col-md-12 news-section__item">
                         <div class="program-box">
-                            <div class="row">
+                            <div class="row h-100">
                                 <div class="col-md-4">
                                     <img src="assets/img/build.png" class="prog-img" alt="Video">
                                 </div>
@@ -1049,9 +1049,9 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-6 col-md-12">
+                    <div class="col-xl-6 col-md-12 news-section__item">
                         <div class="program-box">
-                            <div class="row">
+                            <div class="row h-100">
                                 <div class="col-md-4">
                                     <img src="assets/img/build.png" class="prog-img" alt="Video">
                                 </div>
@@ -1071,9 +1071,9 @@
 
                         </div>
                     </div>
-                    <div class="col-xl-6 col-md-12">
+                    <div class="col-xl-6 col-md-12 news-section__item">
                         <div class="program-box">
-                            <div class="row">
+                            <div class="row h-100">
                                 <div class="col-md-4">
                                     <img src="assets/img/build.png" class="prog-img" alt="Video">
                                 </div>
@@ -1134,7 +1134,7 @@
                         <div class="gallery-section">
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
@@ -1150,7 +1150,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
@@ -1166,7 +1166,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
@@ -1182,7 +1182,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
@@ -1204,7 +1204,7 @@
                             </div>
                             <div class="container margin-space2">
                                 <div class="row">
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
@@ -1220,7 +1220,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
@@ -1236,7 +1236,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
@@ -1252,7 +1252,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
@@ -1284,7 +1284,7 @@
                         <div class="gallery-section">
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
@@ -1300,7 +1300,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
@@ -1316,7 +1316,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
@@ -1332,7 +1332,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
@@ -1354,7 +1354,7 @@
                             </div>
                             <div class="container margin-space2">
                                 <div class="row">
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
@@ -1370,7 +1370,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
@@ -1386,7 +1386,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
@@ -1402,7 +1402,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xl-3 col-md-6 h-100">
+                                    <div class="col-xl-3 col-md-6 gallery-section__item">
                                         <div class="gallery-box ">
                                             <div class="grid-item position-relative">
                                                 <a data-fancybox="gallery" href="assets/img/build.png">
